--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "crate",
+  "name": "crate-js",
   "main": "dist/index.js",
   "author": "Aaron Scherer <aequasi@gmail.com>",
   "version": "0.1.0",
