Refactoring, New features as well
Service references are now done by a string, prefixed by a `@`, just like in Symfony.
Ability to have Loaders added. JsonLoader created by default. (Pull requests welcome for other types).
Loaders add the ability to load multiple container definitions into a single container builder

--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "grunt-notify": "^0.4.1",
     "load-grunt-tasks": "^3.3.0",
     "mocha": "^2.3.3"
+  },
+  "dependencies": {
+    "extend": "^3.0.0"
   }
 }
