--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "type": "git",
     "url": "https://www.github.com/aequasi/crate"
   },
+  "scripts": {
+    "test": "./node_modules/mocha/bin/mocha"
+  },
   "license": "MIT",
   "devDependencies": {
     "babelify": "^6.3.0",
