Fixing json loader

--- a/package.json
+++ b/package.json
@@ -26,7 +26,5 @@
     "load-grunt-tasks": "^3.3.0",
     "mocha": "^2.3.3"
   },
-  "dependencies": {
-    "extend": "^3.0.0"
-  }
+  "dependencies": {}
 }
